# vibe_photos_v3

./: .cursorignore  .gitignore  AGENTS.md  AI_AUDIT_REPORT.md  AI_CODING_STANDARDS.md  AI_DEVELOPMENT_GUIDE.md  AI_IMPLEMENTATION_DETAILS.md  AI_PROJECT_MAP.md  AI_TASK_TRACKER.md  DEPENDENCIES.md  DEPENDENCIES_CLEANUP_REPORT.md  DIRECTORY_STRUCTURE.md  FINAL_CHECKLIST.md  POC_PHASE_NOTICE.md  README.md  README_FOR_AI.md  ROADMAP.md  UV_USAGE.md  app.py  check_dependencies.py  download_models.py  init_project.sh  process_dataset.py  pyproject.toml  quick_start.py
blueprints/: AI_BLUEPRINT_GUIDE.md  README.md
blueprints/phase1/: DATASET_ANALYSIS.md  DATASET_USAGE.md  README.md  RTMDET_CHOICE.md  app.py  architecture.md  check_dependencies.py  config.yaml  design_decisions.md  download_models.py  implementation.md  process_dataset.py  quick_start.py  requirements-dev.txt  requirements.txt  sample_dataset.py  testing.md
blueprints/phase2/: README.md  architecture.md  implementation.md  testing.md
blueprints/phase_final/: DOCUMENTATION_CLEANUP_SUMMARY.md  FINAL_TECHNOLOGY_DECISIONS.md  HANDOVER.md  OPTIMIZATION_SUMMARY.md  README.md  REVIEW_REPORT.md  requirements-dev.txt  requirements.txt
blueprints/phase_final/architecture/: VECTOR_DB_CLARIFICATION.md  queue_and_task_management.md  system_architecture.md  vector_db_and_model_versioning.md  video_processing_strategy.md
blueprints/phase_final/docs/: 01_requirements.md  02_solution_design.md  03_technical_choices.md  04_implementation_guide.md  05_rtmdet_integration.md  05_siglip_blip_integration.md
blueprints/phase_final/knowledge/: lessons_learned.md
blueprints/phase_final/poc/: few_shot_learner.py  hybrid_recognizer.py  rtmdet_detector.py  siglip_blip_detector.py  simple_detector.py
blueprints/phase_final/research/: DOCUMENTATION_CLEANUP_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  REVIEW_REPORT_ARCHIVE.md  TECHNOLOGY_RESEARCH_ARCHIVE.md
blueprints/phase_final/specs/: database_schema.sql
config/: CONFIG_CONTRACT.md  candidates.example.yaml  settings.yaml  settings.yaml.sample
decisions/: AI_DECISION_RECORD.md  README.md  REQUIREMENTS_BRIEF.md  TECHNICAL_DECISIONS.md
decisions/archives/: FINAL_TECHNOLOGY_DECISIONS.md  SIGLIP_CHOICE.md  design_decisions.md
poc1_design/: CONSISTENCY_CHECK.md  DATASET_ANALYSIS.md  DATASET_USAGE.md  OVERVIEW.md  README.md  RTMDET_CHOICE.md  architecture.md  check_dependencies.py  config.yaml  design_decisions.md  implementation.md  process_dataset.py  quick_start.py  requirements-dev.txt  requirements.txt  sample_dataset.py  testing.md
src/: cli.py
src/api/: main.py
src/api/routes/: assets.py  health.py  ingest.py  search.py
src/api/schemas/: models.py
src/api/services/: dependencies.py
src/cli/: __init__.py
src/core/: database.py  detector.py  ocr.py  preprocessor.py  processor.py  searcher.py
src/models/: blip.py  siglip.py
src/services/: cache.py  ingestion_service.py  task_queue.py
src/utils/: config.py  logging.py  runtime.py
tests/unit/: test_api_main.py  test_assets_route.py  test_cache_services.py  test_cli.py  test_compatibility_guard.py  test_database_init.py  test_ingest_route.py  test_preprocessor.py  test_repository_search.py  test_runtime_config.py  test_siglip_and_detector.py  test_task_queue.py
v3_design/: HANDOVER.md  README.md  REVIEW_REPORT.md  requirements-dev.txt  requirements.txt
v3_design/architecture/: system_architecture.md
v3_design/docs/: 01_requirements.md  02_solution_design.md  03_technical_choices.md  04_implementation_guide.md  05_rtmdet_integration.md
v3_design/knowledge/: lessons_learned.md
v3_design/poc/: few_shot_learner.py  rtmdet_detector.py
v3_design/specs/: database_schema.sql
v3_design_feedback/: gemini_deep_think.md  gpt_codex.md  gpt_deep_research.md
